--- a/views/justlist.ejs
+++ b/views/justlist.ejs
@@ -10,9 +10,14 @@
   <p>see leht on loodud õppetöö raames <a href="https://www.tlu.ee" target="_blank">Tallinna ülikoolis</a> ja ei sisalda tõsiseltvõetavat sisu.</p>
   <hr>
   <ul>
-	<li><a href="/timenow">Ajainfo</a></li>
-	<li><a href="/vanasonad">Vanasõnad</a></li>
-	<li><a href="/regvisit">Registreeri oma külastus</a></li>
+	<li><a href="/">Avaleht</a></li>
+  </ul>
+  <hr>
+  <h2><% h2 %></h2>
+  <ul>
+	<% listData.forEach(function(item){ %>
+	<li><%= item %></li>
+	<% }); %>
   </ul>
   
  </body>
