--- a/views/filmindex.ejs
+++ b/views/filmindex.ejs
@@ -9,13 +9,12 @@
   <h1>Jan Aaron Einloo</h1>
   <p>see leht on loodud õppetöö raames <a href="https://www.tlu.ee" target="_blank">Tallinna ülikoolis</a> ja ei sisalda tõsiseltvõetavat sisu.</p>
   <hr>
+  <h2>Eesti film</h2>
   <ul>
-	<li><a href="/timenow">Ajainfo</a></li>
-	<li><a href="/vanasonad">Vanasõnad</a></li>
-	<li><a href="/regvisit">Registreeri oma külastus (txt põhine)</a></li>
-	<li><a href="/regvisitdb">Registreeri oma külastus</a></li>
-	<li><a href="/eestifilm">Eesti film</a></li>
+	<li><a href="/">Avaleht</a></li>
+	<li><a href="/eestifilm/tegelased">Eesti filmitegelased</a></li>
   </ul>
+  <hr>
   
  </body>
  </html>
