--- a/views/addNews.ejs
+++ b/views/addNews.ejs
@@ -10,7 +10,7 @@
   <p>see leht on loodud õppetöö raames <a href="https://www.tlu.ee" target="_blank">Tallinna ülikoolis</a> ja ei sisalda tõsiseltvõetavat sisu.</p>
   <hr>
   <ul>
-	<li><a href="/">Avaleht</a></li>
+	<li><a href="/home">Avaleht</a></li>
   </ul>
   <hr>
   <h2>Sisesta uudis</h2>
