--- a/views/filmindex.ejs
+++ b/views/filmindex.ejs
@@ -11,7 +11,7 @@
   <hr>
   <h2>Eesti film</h2>
   <ul>
-	<li><a href="/">Avaleht</a></li>
+	<li><a href="/home">Avaleht</a></li>
 	<li><a href="/eestifilm/tegelased">Eesti filmitegelased</a></li>
   </ul>
   <hr>
