--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,16 +8,15 @@
   <img src="/banner/vp_banner_2024.png" alt="Veebiprogrammeerimise 2024 aasta kursuse bänner">
   <h1>Jan Aaron Einloo</h1>
   <p>see leht on loodud õppetöö raames <a href="https://www.tlu.ee" target="_blank">Tallinna ülikoolis</a> ja ei sisalda tõsiseltvõetavat sisu.</p>
-  <p>Semestri algus: <%= days %>.</p>
   <hr>
   
   <ul>
-	<li><a href="/timenow">Ajainfo</a></li>
-	<li><a href="/vanasonad">Vanasõnad</a></li>
-	<li><a href="/regvisit">Registreeri oma külastus (txt põhine)</a></li>
-	<li><a href="/regvisitdb">Registreeri oma külastus</a></li>
-	<li><a href="/signup">Loo kasutajakonto</a></li>
-	<li><a href="/signin">Logi sisse</a></li>
+	<li><a href="/logout">Logi välja</a></li>
+	<li><a href="/eestifilm">Eesti film</a></li>
+	<li><a href="/addNews">Lisa uudis</a></li>
+	<li><a href="/newsdb">Loe uudiseid</a></li>
+	<li><a href="/photoupload">Lae üles galeriipilte</a></li>
+	<li><a href="/gallery">Vaata galeriid</a></li>
   </ul>
   
  </body>
