--- a/views/newsdb.ejs
+++ b/views/newsdb.ejs
@@ -10,14 +10,23 @@
   <p>see leht on loodud õppetöö raames <a href="https://www.tlu.ee" target="_blank">Tallinna ülikoolis</a> ja ei sisalda tõsiseltvõetavat sisu.</p>
   <hr>
   <ul>
-	<li><a href="/">Avaleht</a></li>
+	<li><a href="/home">Avaleht</a></li>
   </ul>
   <hr>
-  <h2><% h2 %></h2>
-  <ul>
-	<% news.forEach(function(item){ %>
-	<li><%= item.news_title %> <%= item.news_text %> <%= item.news_date %></li>
-	<% }); %>
+  <h1>Uudised</h1>
+  <% if (newsList.length === 0) { %>
+	<p>Ei leitud ühtegi uudist!</p>
+	<% } else { %>
+		<ul>
+			<% newsList.forEach(news => { %>
+				<li>
+					<h2><%= news.news_title %></h2>
+					<p>Lisamise kuupäev: <%= news.news_date %></p>
+					<pre>Sisu: <%= news.news_text %></pre>
+				</li>
+			<% }); %>
+		</ul>
+	<% } %>
   </ul>
  </body>
  </html>
