--- a/views/photosdb.ejs
+++ b/views/photosdb.ejs
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Jan Aaron Einloo</title>
+  <link rel="stylesheet" href="/style/gallery.css">
+  <link rel="stylesheet" href="/style/modal.css">
 </head>
 <body>
   <img src="/banner/vp_banner_2024.png" alt="Veebiprogrammeerimise 2024 aasta kursuse bänner">
@@ -10,20 +12,21 @@
   <p>see leht on loodud õppetöö raames <a href="https://www.tlu.ee" target="_blank">Tallinna ülikoolis</a> ja ei sisalda tõsiseltvõetavat sisu.</p>
   <hr>
   <ul>
-	<li><a href="/">Avaleht</a></li>
+	<li><a href="/home">Avaleht</a></li>
   </ul>
   <hr>
   <h2>Galerii thumbnailide valik</h2>
+  <div id="gallery" class="gallery">
   <ul>
-  <li> <a href="/">Avaleht</a></li>
   <% if (photos.length === 0) { %>
     <p>Ei leitud ühtegi pilti.</p>
     <% } else { %>
         <% photos.forEach(photo => { %>
 		<p>Lisamise kuupäev: <%= photo.added %></p>
-        <img src="/gallery/thumbnail/<%= photo.file_name %>" alt="<%= photo.alt_text %>"> 
+        <img src="/gallery/thumbnail/<%= photo.file_name %>" alt="<%= photo.alt_text %>" class="thumbs"> 
     <% }); %>
   <% } %>
   </ul>
+  </div>
  </body>
  </html>
