Tegime routes, controllers, async

--- a/views/addNews.ejs
+++ b/views/addNews.ejs
@@ -9,7 +9,11 @@
   <h1>Jan Aaron Einloo</h1>
   <p>see leht on loodud õppetöö raames <a href="https://www.tlu.ee" target="_blank">Tallinna ülikoolis</a> ja ei sisalda tõsiseltvõetavat sisu.</p>
   <hr>
+  <% if (user) { %>
+      <p>Sisse loginud kasutaja:  <%= user.firstName %> <%= user.lastName %></p>
+  <% } %>
   <ul>
+	<li><a href="/news">Uudiste avalehele</a></li>
 	<li><a href="/home">Avaleht</a></li>
   </ul>
   <hr>
