--- a/views/filmindex.ejs
+++ b/views/filmindex.ejs
@@ -9,10 +9,14 @@
   <h1>Jan Aaron Einloo</h1>
   <p>see leht on loodud õppetöö raames <a href="https://www.tlu.ee" target="_blank">Tallinna ülikoolis</a> ja ei sisalda tõsiseltvõetavat sisu.</p>
   <hr>
+  <% if (user) { %>
+      <p>Sisse loginud kasutaja:  <%= user.firstName %> <%= user.lastName %></p>
+  <% } %>
   <h2>Eesti film</h2>
   <ul>
 	<li><a href="/home">Avaleht</a></li>
 	<li><a href="/eestifilm/tegelased">Eesti filmitegelased</a></li>
+	<li><a href="/eestifilm/lisaSeos">Lisa filmitegelase seoseid</a></li>
   </ul>
   <hr>
   
