Lisatud piltide vaatamine lehekülgede kaupa

--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -28,6 +28,7 @@
 	</div>
   </dialog>
   <h2>Fotogalerii</h2>
+  <p><%- links %></p>
   <div id="gallery" class="gallery">
   
 	  <% listData.forEach(function(image){ %>
