--- a/views/viljavedu.ejs
+++ b/views/viljavedu.ejs
@@ -9,16 +9,11 @@
   <h1>Jan Aaron Einloo</h1>
   <p>see leht on loodud õppetöö raames <a href="https://www.tlu.ee" target="_blank">Tallinna ülikoolis</a> ja ei sisalda tõsiseltvõetavat sisu.</p>
   <hr>
-  <% if (user) { %>
-      <p>Sisse loginud kasutaja:  <%= user.firstName %> <%= user.lastName %></p>
-  <% } %>
-  <h2>Eesti film</h2>
+  <h2>Viljaveo andmed</h2>
   <ul>
-	<li><a href="/home">Avaleht</a></li>
-	<li><a href="/eestifilm/tegelased">Eesti filmitegelased</a></li>
-	<li><a href="/eestifilm/lisaSeos">Lisa filmitegelase seoseid</a></li>
+	<li><a href="/carAdd">Autode sisestus</a></li>
+	<li><a href="/carView">Koormad</a></li>
   </ul>
-  <hr>
   
  </body>
  </html>
